# rDHCP

./: .dockerignore  .gitignore  CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  Dockerfile  LICENSE  README.md  SECURITY.md  example-config.toml  plan.md  rdhcpd.service
.github/: FUNDING.yml  PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: ci.yml  release.yml
bench/: config.toml  kea-config.json  run.sh
src/: bpf.rs  lib.rs  main.rs  probe.rs  ratelimit.rs
src/allocator/: mod.rs
src/api/: handlers.rs  metrics.rs  mod.rs
src/config/: mod.rs  types.rs  validation.rs
src/ddns/: dns.rs  mod.rs  tsig.rs
src/dhcpv4/: mod.rs  options.rs  packet.rs  server.rs  stats.rs
src/dhcpv6/: mod.rs  options.rs  packet.rs  server.rs
src/ha/: active_active.rs  mod.rs  peer.rs  protocol.rs  raft.rs
src/lease/: expiry.rs  mod.rs  store.rs  types.rs
src/wal/: mod.rs
tests/: dhcpv4_relay_gates.rs
