[package]
name = "rdhcpd"
version = "0.11.1"
edition = "2024"
description = "High-performance DHCP server with built-in HA support. Dual-stack (DHCPv4/DHCPv6), active/active and Raft HA, single binary, no external DB."
license = "MIT"
repository = "https://github.com/ZerosAndOnesLLC/rDHCP"
homepage = "https://github.com/ZerosAndOnesLLC/rDHCP"
readme = "README.md"
keywords = ["dhcp", "dhcpv6", "networking", "server", "high-availability"]
categories = ["network-programming", "command-line-utilities"]

[lib]
name = "rdhcpd"
path = "src/lib.rs"

[[bin]]
name = "rdhcpd"
path = "src/main.rs"


[dependencies]
# Async runtime
tokio = { version = "1", features = ["full"] }

# Serialization / config
serde = { version = "1", features = ["derive"] }
toml = "0.8"

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["json", "env-filter"] }

# Error handling
thiserror = "2"

# Concurrent data structures
dashmap = "6"

# CRC for WAL checksums
crc32fast = "1"

# Byte order for packet parsing
byteorder = "1"

# Cryptography (TSIG signing)
sha2 = "0.10"
hmac = "0.12"
base64 = "0.22"

# Constant-time comparison (API key)
subtle = "2"

# Zero secrets on drop
zeroize = { version = "1", features = ["derive", "serde"] }

# Random number generation (DDNS transaction IDs)
rand = "0.9"

# TLS for HA peer communication
tokio-rustls = "0.26"
rustls = "0.23"
rustls-pemfile = "2"

# Serialization for HA wire protocol
serde_json = "1"

# REST API
axum = "0.8"
tower-http = { version = "0.6", features = ["cors"] }

# Socket options (SO_REUSEPORT)
socket2 = { version = "0.5", features = ["all"] }

# Signal handling
nix = { version = "0.30", features = ["signal"] }

# Platform-specific syscalls (FreeBSD IP_BINDANY)
[target.'cfg(target_os = "freebsd")'.dependencies]
libc = "0.2"

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
strip = true
